OpenApi spec 3.0 and 1.0 of our API (#414)
Updates our API-Spec from being described with Swagger (OpenAPI 2.0) to OpenAPI 3.0

It also sets our version of the API to 1.0.0 and sets `x-qlik-stability` to stable

I have TURNED OFF the CircleCI testing of our APIs using Dredd since Dredd only has experimental support for OpenAPI 3.0 right now and can not parse our specification.
(Current OpenAPI 3.0 support in Dredd: https://github.com/apiaryio/api-elements.js/blob/master/packages/fury-adapter-oas3-parser/STATUS.md)

Closes #408
